functional, change the loclaisation file

--- a/lambda/package.json
+++ b/lambda/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "happy-birthday",
+  "name": "happy-anniversary",
   "version": "0.9.0",
   "description": "happy birthday skill",
   "main": "index.js",
@@ -13,7 +13,6 @@
       "i18next": "^15.0.5",
       "ask-sdk-s3-persistence-adapter": "^2.7.0",
       "ask-sdk-dynamodb-persistence-adapter": "^2.7.0",
-      "moment-timezone": "^0.5.23",
-      "axios": "^0.18.0"
+      "moment-timezone": "^0.5.23"
   }
 }
