--- a/lambda/package.json
+++ b/lambda/package.json
@@ -1,7 +1,7 @@
 {
   "name": "happy-anniversary",
   "version": "0.9.0",
-  "description": "happy birthday skill",
+  "description": "happy anniversary skill",
   "main": "index.js",
   "scripts": {
       "test": "echo \"Error: no test specified\" && exit 1"
